fixed: posts/pages popup showing extra gaps heightwise
https://app.asana.com/0/9056903824374/68899152720613

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -6906,7 +6906,7 @@ i.upfront-field-icon-burger-trigger {
 #upfront-list #upfront-list-meta.upfront-list_item .upfront-list_item-component.active {
   padding-bottom: 3px; }
 
-#upfront-list #upfront-list-meta.upfront-list_item.upfront-comments.upfront-header .upfront-list_item-component.active {
+#upfront-list #upfront-list-meta.upfront-list_item.upfront-comments-count.upfront-header .upfront-list_item-component.active {
   padding-bottom: 3px; }
 
 #upfront-list #upfront-list-meta.upfront-list_item .icon-caret-down, #upfront-list #upfront-list-meta.upfront-list_item .icon-caret-up {
@@ -6950,7 +6950,7 @@ i.upfront-field-icon-burger-trigger {
 .upfront-list_item-component.upfront-author {
   width: 15%; }
 
-.upfront-list_item-component.upfront-comments {
+.upfront-list_item-component.upfront-comments-count {
   width: 10%; }
 
 .upfront-list_item-component.upfront-editactions {
@@ -7006,7 +7006,7 @@ a.editaction.trash {
   color: #fff;
   margin-right: 0; }
 
-.upfront-list_item-component.upfront-comments.upfront-header i.icon-post-comments {
+.upfront-list_item-component.upfront-comments-count.upfront-header i.icon-post-comments {
   display: inline-block !important;
   height: 14px;
   width: 14px;
@@ -7016,7 +7016,7 @@ a.editaction.trash {
   background-position: -912px -171px;
   vertical-align: middle; }
 
-.upfront-list_item-post.upfront-list_item:hover .upfront-list_item-component.upfront-author, .upfront-list_item-post.upfront-list_item:hover .upfront-list_item-component.upfront-comments, .upfront-list_item-post.status-trash {
+.upfront-list_item-post.upfront-list_item:hover .upfront-list_item-component.upfront-author, .upfront-list_item-post.upfront-list_item:hover .upfront-list_item-component.upfront-comments-count, .upfront-list_item-post.status-trash {
   display: none; }
 
 .upfront-list_item-post.upfront-list_item:hover .upfront-list_item-component.upfront-editactions {
